🐛 fix background in dark mode

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -44,6 +44,7 @@ $blog-dark-theme: mat.define-dark-theme((
   // Generates styles for all systems configured in the theme. In this case, color styles
   // and the default density styles are generated. **Note** that this is a problem because it
   // means that density styles are generated *again*, even though only the color should change.
+  background-color: #303030;
   @include mat.all-component-themes($blog-dark-theme);
 }
 
